--- a/youtube.html
+++ b/youtube.html
@@ -5,15 +5,31 @@
     <style>
       .thumbnail {
         width: 300px;
+        display: block;
       }
 
       .search-bar {
         
       }
+
+      .video-title {
+        width: 300px;
+      }
     </style>
   </head>
   <body>
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
     <input class="search-bar" type="text" placeholder="Search">
+    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+   
+    
+    <p class="video-title">
+      HTML & <strong>CSS Full Course</strong> - Beginner to Pro
+    </p>
+    <p class="video-author">
+      SuperSimpleDev
+    </p>
+    <p class="video-stats">
+      11M views &#183; 2 years ago
+    </p>
   </body>
 </html>
