--- a/index.html
+++ b/index.html
@@ -9,27 +9,50 @@
       }
 
       .search-bar {
-        
+        display: block;
       }
 
       .video-title {
         width: 300px;
       }
+
+      .video-preview {
+        width: 300px;
+        display: inline-block;
+        vertical-align: top;
+        margin-right: 15px;
+      }
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search">
-    <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
    
-    
-    <p class="video-title">
-      HTML & <strong>CSS Full Course</strong> - Beginner to Pro
-    </p>
-    <p class="video-author">
-      SuperSimpleDev
-    </p>
-    <p class="video-stats">
-      11M views &#183; 2 years ago
-    </p>
+    <div class="video-preview">
+      <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+
+      <p class="video-title">
+        HTML & CSS Full Course - Beginner to Pro
+      </p>
+      <p class="video-author">
+        SuperSimpleDev
+      </p>
+      <p class="video-stats">
+        11M views &#183; 2 years ago
+      </p>
+    </div>
+
+    <div class="video-preview">
+      <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+
+      <p class="video-title">
+        Unboxing VICTUS - HP Special Edition RTX 3050 A
+      </p>
+      <p class="video-author">
+        Prasadtechintelugu
+      </p>
+      <p class="video-stats">
+        70K views &#183; 1 day ago
+      </p>
+    </div>
   </body>
 </html>
