4 more video previews added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       }
 
       .thumbnail {
-        width: 300px;
-        display: block;
+        width: 100%;
       }
 
       .search-bar {
@@ -31,22 +30,9 @@
         margin-bottom: 12px;
       }
 
-      .video-preview {
-        width: 300px;
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 15px;
-      }
-
-      .channel-picture {
-        display: inline-block;
-        width: 50px;
-        vertical-align: top;
-      }
-
-      .video-info {
-        display: inline-block;
-        width: 200px;
+      .video-info-grid {
+        display: grid;
+        grid-template-columns: 50px 1fr;
       }
 
       .profile-picture {
@@ -67,51 +53,148 @@
       .video-author {
         margin-bottom: 4px;
       }
+
+      .video-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 16px;
+        row-gap: 40px;
+      }
     </style>
   </head>
   <body>
     <input class="search-bar" type="text" placeholder="Search">
-   
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
-      </div>
-      <div>
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
-        </div>
-        <div class="video-info">
-          <p class="video-title">
-            HTML & CSS Full Course - Beginner to Pro
-          </p>
-          <p class="video-author">
-            SuperSimpleDev
-          </p>
-          <p class="video-stats">
-            11M views &#183; 2 years ago
-          </p>
-        </div>
-      </div>
-    </div>
 
-    <div class="video-preview">
-      <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
-      </div>
-      <div>
-        <div class="channel-picture">
-          <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+    <div class="video-grid">
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
         </div>
-        <div class="video-info">
-          <p class="video-title">
-            iPhone 16 Series Unboxing & initial impressions in Telugu
-          </p>
-          <p class="video-author">
-            Prasadtechintelugu
-          </p>
-          <p class="video-stats">
-            674K views &#183; 12 days ago
-          </p>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              HTML & CSS Full Course - Beginner to Pro
+            </p>
+            <p class="video-author">
+              SuperSimpleDev
+            </p>
+            <p class="video-stats">
+              12M views &#183; 2 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              iPhone 16 Series Unboxing & initial impressions in Telugu
+            </p>
+            <p class="video-author">
+              Prasadtechintelugu
+            </p>
+            <p class="video-stats">
+              709K views &#183; 2 weeks ago
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Major Problem with modern Smartphones - Industry needs to address
+            </p>
+            <p class="video-author">
+              Geekyranjit
+            </p>
+            <p class="video-stats">
+              253K views &#183; 2 weeks ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-4.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Kalki 2898 AD Glimpse | Prabhas | Amitabh Bachchan | Kamal Haasan | Deepika | Nag Ashwin | June 27
+            </p>
+            <p class="video-author">
+              Vyjayanthi Network
+            </p>
+            <p class="video-stats">
+              44M views &#183; 1 year ago
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-5.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              OOP in Python | Object Oriented Programming
+            </p>
+            <p class="video-author">
+              Telusko
+            </p>
+            <p class="video-stats">
+              1.8M views &#183; 5 years ago
+            </p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img class="profile-picture" src="channel-pictures/channel-6.jpeg">
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              CID - Ep 1547 - Full Episode -27th October, 2018
+            </p>
+            <p class="video-author">
+              SET India
+            </p>
+            <p class="video-stats">
+              22M views &#183; 5 years ago
+            </p>
+          </div>
         </div>
       </div>
     </div>
